<resources>
    <!-- ****************** Utilities ****************** -->
    <string name="titulo">Titulo</string>
    <string name="advertencia">Advertencia</string>
    <string name="exito">Éxito</string>
    <string name="informacion">Información</string>
    <string name="error_servicio">Error en el servicio</string>
    <string name="parece_que_no_tienes_internet">Parece que no tienes Internet</string>


    <!-- Mensaje emergente -->
    <string name="error_internet">No tienes conexión a Internet</string>

    <!-- Botones -->
    <string name="reintentar">Reintentar</string>
    <string name="cerrar">Cerrar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="volver">Volver</string>
    <string name="continuar">Continuar</string>

    <!-- ALTS  -->
    <string name="icon_toastmessage">Icon Toast Message</string>

    <string name="app_name">PrimeraAPP</string>
    <string name="valor_de_lista">Valor de Lista</string>
    <string name="bot_n">Botón</string>
    <string name="ingresa_tu_nombre">ingresa_tu_nombre</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="calcular_masa_corporal">Calcular Masa Corporal</string>
    <string name="resultado">Resultado</string>
    <string name="volver_a_calcular">Volver a Calcular</string>
    <string name="error">error</string>
    <string name="save">Guardar</string>

    <!-- ****************** IMC APP ****************** -->
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="edad">Edad</string>
    <string name="_120_cm">120 cm</string>
    <string name="_35_kg">35 kg</string>
    <string name="_23_a_os">23 Años</string>

    <!--ALTS  -->
    <string name="menos_peso">Menos peso</string>
    <string name="aumentar_edad">Aumentar edad</string>
    <string name="disminuir_edad">Disminuir edad</string>
    <string name="aumentar_peso">Aumentar peso</string>

    <!-- Activity ResultActivity  -->
    <string name="titulo_bajo_peso">Peso Insuficiente</string>
    <string name="estatus_bajo_peso">Tu peso está por debajo del rango ideal para tu salud.</string>
    <string name="titulo_nomal_peso">Peso Saludable</string>
    <string name="estatus_nomal_peso">Tu peso se encuentra dentro del rango ideal para tu salud.</string>
    <string name="titulo_sobrepeso">Exceso de Peso</string>
    <string name="estatus_sobrepeso">Tu peso está por encima del rango ideal para tu salud.</string>
    <string name="titulo_obesidad">Estado de Obesidad</string>
    <string name="estatus_obesidad">Estás en un estado de obesidad, lo cual puede afectar tu salud.</string>
    <string name="todo_app">TODO App</string>
    <string name="fotos_app">Fotos App</string>
    <string name="hero_app">Hero App</string>
    <string name="imc_app">IMC App</string>

    <!-- Todo Activity  -->
    <string name="todo_ejemplo">Ejemplo de TODO App</string>
    <string name="todo_titulo">hola haziel</string>
    <string name="todo_categoria">categorias</string>
    <string name="todo_tareas">tareas</string>
    <string name="todo_add_tarea">Añade una tarea</string>
    <string name="todo_personal">Personal</string>
    <string name="todo_negocios">Negocios</string>
    <string name="todo_otros">Otros</string>
    <string name="combate">Combate</string>
    <string name="ajustes">Ajustes</string>

    <!-- Ajustes  Activity -->
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="habilita_el_modo_oscuro">Habilita el modo oscuro</string>
    <string name="vibracion">Vibración</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="volumen">Volumen</string>

    <!-- ****** Mensajes Genericos -->

</resources>
