<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/background_todo_app"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/etTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:hint="@string/todo_add_tarea"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <RadioGroup
            android:id="@+id/rgCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/rbPersonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/azul_celeste"
                android:checked="true"
                android:text="@string/todo_personal"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rbBusiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/trabajo"
                android:text="@string/todo_negocios"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rbOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/ocio"
                android:text="@string/todo_otros"
                android:textColor="@color/white" />
        </RadioGroup>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/btn"
            android:padding="10dp"
            android:text="@string/save" />

    </LinearLayout>

</androidx.cardview.widget.CardView>