<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="androidearly.primeraApp.MenuPrincipal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnPrimerApp"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="Primera Ventana"
            android:textColor="@color/white"
            app:backgroundTint="@color/btn"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/btnIMCApp"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/imc_app"
            android:textColor="@color/white"
            app:backgroundTint="@color/btn" />

        <Button
            android:id="@+id/btnToDoApp"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/todo_app"
            android:textColor="@color/white"
            app:backgroundTint="@color/btn" />

        <Button
            android:id="@+id/btnHeroApp"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/hero_app"
            android:textColor="@color/white"
            app:backgroundTint="@color/btn" />

        <Button
            android:id="@+id/btnFotosApp"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/fotos_app"
            android:textColor="@color/white"
            app:backgroundTint="@color/btn" />

        <Button
            android:id="@+id/btnAjustesApp"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/ajustes"
            android:textColor="@color/white"
            app:backgroundTint="@color/btn" />

        <Button
            android:id="@+id/btnImprimir"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/imprimir"
            android:textColor="@color/white"
            android:visibility="gone"
            app:backgroundTint="@color/btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>