<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="primeraApp.PrimerVentana">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/appCompatEditText"
        android:layout_width="200dp"
        style="@style/TextField"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/ingresa_tu_nombre"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnADD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnADD"
        style="@style/ButtonStyleLila"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/bot_n"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Aplicando el estilo a la lista de texto -->
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="250dp"
        style="@style/SpinnerStyle"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewLista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLista"
        android:layout_width="150dp"
        style="@style/TextField"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/appCompatEditText"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/valor_de_lista"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
